--- a/index.html
+++ b/index.html
@@ -173,6 +173,6 @@
 
 		});
 		</script>
-
+<script async defer src="https://tools.luckyorange.com/core/lo.js?site-id=d860212e"></script>
 
 </body></html>
